change folder structure and remove dataset from repo

--- a/notebooks/DataCollection.ipynb
+++ b/notebooks/DataCollection.ipynb
@@ -435,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMAGES_PATH = 'data'\n",
+    "IMAGES_PATH = '../aug_data'\n",
     "number_images = 80"
    ]
   },
@@ -508,7 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_images = tf.data.Dataset.list_files('aug_data\\\\train\\\\images\\\\*.jpg', shuffle=False)\n",
+    "train_images = tf.data.Dataset.list_files('..\\\\aug_data\\\\train\\\\images\\\\*.jpg', shuffle=False)\n",
     "train_images = train_images.map(load_image)\n",
     "train_images = train_images.map(lambda x: tf.image.resize(x, (250, 250)))\n",
     "train_images = train_images.map(lambda x: x/255)"
@@ -520,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_images = tf.data.Dataset.list_files('aug_data\\\\val\\\\images\\\\*.jpg', shuffle=False)\n",
+    "val_images = tf.data.Dataset.list_files('..\\\\aug_data\\\\val\\\\images\\\\*.jpg', shuffle=False)\n",
     "val_images = val_images.map(load_image)\n",
     "val_images = val_images.map(lambda x: tf.image.resize(x, (250, 250)))\n",
     "val_images = val_images.map(lambda x: x/255)"
@@ -564,9 +564,9 @@
    "source": [
     "train_label = []\n",
     "\n",
-    "train_file_name = os.listdir('aug_data/train/labels/')\n",
+    "train_file_name = os.listdir('../aug_data/train/labels/')\n",
     "for file in train_file_name:\n",
-    "    with open (os.path.join('aug_data', 'train', 'labels', file), 'r', encoding = 'utf-8') as f:\n",
+    "    with open (os.path.join('../aug_data', 'train', 'labels', file), 'r', encoding = 'utf-8') as f:\n",
     "        train_label.append(json.load(f))"
    ]
   },
@@ -639,9 +639,9 @@
    "source": [
     "val_label = []\n",
     "\n",
-    "val_file_name = os.listdir('aug_data/val/labels/')\n",
+    "val_file_name = os.listdir('../aug_data/val/labels/')\n",
     "for file in val_file_name:\n",
-    "    with open (os.path.join('aug_data', 'val', 'labels', file), 'r', encoding = 'utf-8') as f:\n",
+    "    with open (os.path.join('../aug_data', 'val', 'labels', file), 'r', encoding = 'utf-8') as f:\n",
     "        val_label.append(json.load(f))"
    ]
   },
